--- a/backedn/package.json
+++ b/backedn/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.6.3",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   }
 }
